syntax = "proto3";

package dnf.v1;

option go_package = "github.com/pixb/DnfGameServer/dnf-go-client/gen/dnf/v1;dnfv1";

import "dnf/v1/common.proto";
import "dnf/v1/dungeon_systems.proto";

// 舞台系统消息类型
message RES_STAGE_INFO {
  int32 error = 1;
  PT_MAP_INFO map = 2;
  int32 mapsize = 3;
}

message RES_STAGE_CLEAR {
  int32 error = 1;
  int32 stageId = 2;
  bool perfectClear = 3;
}

message RES_DUNGEON_INFO {
  int32 error = 1;
  int32 dungeonId = 2;
  int32 remainingTime = 3;
}

message RES_DUNGEON_CLEAR {
  int32 error = 1;
  int32 dungeonId = 2;
  repeated RewardInfo rewards = 3;
}

message RES_TRANSMISSION_ITEM {
  int32 error = 1;
  int32 itemId = 2;
  int32 quantity = 3;
}

message RES_REQUEST_TO_RE_ENTER_DUNGEON {
  int32 error = 1;
  bool allowed = 2;
}

message PT_MAP_INFO {
  int32 id = 1;
  string name = 2;
  int32 type = 3;
}

// 聊天系统消息类型
message SEND_CHAT {
  string content = 1;
  int32 type = 2;
  string target = 3;
}

message RES_TOWN_CHAT {
  int32 error = 1;
  string sender = 2;
  string content = 3;
  int32 type = 4;
  int64 timestamp = 5;
}

message RES_TOWN_CHAT_LIST {
  int32 error = 1;
  repeated ChatMessage messages = 2;
}

message SESSION_AUTH_CHAT {
  string token = 1;
  int64 userId = 2;
}

message ChatMessage {
  string sender = 1;
  string content = 2;
  int32 type = 3;
  int64 timestamp = 4;
}
